<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.emergency.NearbyActivity">

    <LinearLayout
        style="@style/HeaderTextStyle"
        android:layout_weight="1">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_margin="10dp"
            android:text="@string/ambulance_text" />
    </LinearLayout>

    <LinearLayout
        style="@style/HeaderTextStyle"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/hospital_text" />
    </LinearLayout>

    <LinearLayout

        style="@style/HeaderTextStyle"
        android:layout_weight="1">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_margin="10dp"
            android:text="@string/police_text" />
    </LinearLayout>
</LinearLayout>